  HOOK_ALLOW, and HOOK_CONTINUE to prevent a user from joining, to immediately allow
  a user to join, and to proceed on to see if other modules will deny the user.
  Based on a suggestion by satmd (#0001604)
- Imported TRE 0.6.5 on Win32 and Linux, solves (#0001542) and (#0001564) reported 
  by methos
- Added rest of release notes.
- Added first 2 rules to spamfilter.conf, update release notes and unrealinst.iss
  for it too (also added missing badwords.quit.conf file @ win32).
- And some more spamfilter.conf rules (mirseed & fagot).
- Updated /credits with a few more donators (listed in no particular order)
- Fixed a little error in the spamfilter.conf
- And some more spamfilter.conf rules (aplore, gtbot, sdbot, spybot).
- Minor doc update.
- Changed version to RC2
*** RC2 release ***
- Fixed a bug regarding the new HOOKTYPE_PRE_LOCAL_JOIN reported by bla
- Fixed a compile problem on Solaris due to tar not supporting the z option
*** RC2fix release ***
- spamfilter.conf: fixed fyle sig (was bad!), some minor updates to the rest,
  added mirc 6.12 exploit sig. Reported by PHANTOm.
- Added a check to try and prevent people from adding all-encompassing
  regexp's in /spamfilter. Thanks to Ville Laurikari for coming up with the
  method!
- Removed the old/unused src/win32/version.c (#0001630) reported by fez
- Updated docs to mention except tkl {} type qline/gqline
- spamfilter.conf: added soex trojan. Sig provided by Jay.
- Fixed a spamfilter memory leak
- Added '__' -> '_' decoding for spamfilter reason field.
- Made it so set::modes-on-join correctly works with extcmodes. Note: to 
  correctly work with modes created by modules, the module _must_ call CmodeAdd
  from Mod_Test (#0001624) reported by thunderbirdjl
- Made some changes to the curlinstall script to make it work with c-ares-1.0.0
  also updated INSTALL.REMOTEINC
- Fixed a typo in the /credits
- Made it so curlinstall doesn't use cp -f since it is nonportable